--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -580,6 +580,7 @@ MOCHITEST_FILES_B = \
 		test_bug789856.html \
 		file_bug804395.jar \
 		test_bug804395.html \
+		test_bug890580.html \
 		$(NULL)
 
 # OOP tests don't work on Windows (bug 763081) or native-fennec
